# KeSp_firmware

./: .clangd  .esp-dev.yml  .gitignore  .kase-board  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  nrf24-readme.md  partitions.csv  partitions_dongle.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.dongle  sdkconfig.defaults.half_left  sdkconfig.defaults.half_right  sdkconfig.old
.claude/: settings.json
.claude/agents/: kase-board-variant.md  kase-cdc-protocol.md  kase-code-reviewer.md  kase-firmware-debugger.md  kase-maintainer.md  kase-release-manager.md  kase-security-auditor.md  kase-test-author.md
.github/workflows/: ci.yml  mirror-release.yml
boards/: kase_dongle_layout.inc  kase_layout.inc
boards/kase_dongle/: README.md  board.h  board_features.h  board_keymap.c  board_layout.c  board_rf.h
boards/kase_v1/: board.h  (+4 more)
components/espressif__keyboard_button/: .component_hash  CMakeLists.txt  idf_component.yml  keyboard_button.c
docs/: CDC_BINARY_PROTOCOL.md  CDC_COMMANDS_REFERENCE.md  CDC_DONGLE_INTEGRATION.md  CDC_KEYSTATS_PROTOCOL.md  CODE_AUDIT_2026-07-04.md  HARDWARE_SMOKE_TEST.md  KEYCODE_MAP.md  NRF24_communication_fix.md  OPENPGP_CARD.md  SECURITY_KEY.md  TAMA_SPRITE_GUIDE.md  keepassxc-kase-vid.patch  keystats_parsing_csharp.md  tamagotchi_design.md
main/: CMakeLists.txt  ICSH044A.c  Kconfig.projbuild  NERV_Logo.c  cdc_acm_com.c  cpu_time.c  cpu_time.h  dfu_manager.c  display_manager.c  graphic_manager.c  hid_bluetooth_manager.c  i2c_oled_display.c  idf_component.yml  img_signal.c  keyboard_manager.c  keymap.c  littlefs_manager.c  main.c  matrix.c  status_display.c  usb_descriptors.c
main/app/: dfu_manager.c  dfu_manager.h
main/comm/: cdc_acm_com.c  cdc_acm_com.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_bluetooth_manager.c  hid_bluetooth_manager.h  hid_transport.c  hid_transport.h  nrf24_receiver.c  usb_descriptors.c
main/comm/ble/: hid_bluetooth_manager.c  hid_bluetooth_manager.h  hid_device_le_prf.c
main/comm/cdc/: cdc_acm_com.c  cdc_acm_com.h  cdc_binary_cmds.c  cdc_binary_cmds.h  cdc_binary_protocol.c  cdc_binary_protocol.h  cdc_commands.c  cdc_dongle_cmds.c  cdc_dongle_stubs.c  cdc_half_stubs.c  cdc_internal.h  cdc_keyboard_cmds.c  cdc_keyboard_cmds.h  cdc_ota.c  cdc_sec_cmds.c  cdc_sec_cmds.h  ks_monitor.c  ks_monitor.h
main/comm/espnow/: espnow_info.c  espnow_info.h  espnow_link.c  espnow_link.h  espnow_msg.h
main/comm/rf/: cfg_bridge.c  cfg_bridge.h  dongle_engine_state.c  half_battery.c  half_battery.h  half_power.c  half_power.h  half_scan_task.c  half_scan_task.h  half_sleep.c  half_sleep.h  heartbeat.c  heartbeat.h  kbd_relay_tx.c  kbd_relay_tx.h  rf_driver.c  rf_driver.h  rf_line_test.c  rf_line_test.h  rf_packet.h  rf_pairing.c  rf_pairing.h  rf_rx_task.c  rf_rx_task.h  v2d_sleep.c  v2d_sleep.h
main/comm/usb/: usb_hid.c  usb_hid.h  usb_presence.c  usb_presence.h
main/comm/wireless/: nrf24_receiver.h
main/config/: shared_state.h  version.h
main/display/: display_backend.h  display_types.h  i2c_oled_display.c  led_strip_anim.c  led_strip_anim.h  round_ui.c  round_ui.h  spi_round_display.c  spi_round_display.h  status_display.c  status_display.h  tamagotchi.c  tamagotchi.h
main/display/assets/: img_bluetooth.c  img_usb.c  imgs.h
main/display/oled/: i2c_oled_display.c  i2c_oled_display.h  oled_backend.c
main/display/round/: round_backend.c  round_ui.c  spi_round_display.c
main/include/: ICSH044A.h  cdc_acm_com.h  display_manager.h  display_types.h  esp_hidd_prf_api.h  graphic_manager.h  hid_bluetooth_manager.h  hid_dev.h  hidd_le_prf_int.h  i2c_oled_display.h  imgs.h  key_definitions.h  keyboard_config.h  keyboard_manager.h  keymap.h  littlefs_manager.h  matrix.h  status_display.h  usb_descriptors.h
main/input/: ICSH044A.c  combo.c  combo.h  hid_report.c  hid_report.h  key_definitions.h  key_features.c  key_features.h  key_processor.c  key_processor.h  key_stats.c  key_stats.h  keyboard_actions.c  keyboard_actions.h  keyboard_config.h  keyboard_manager.c  keyboard_manager.h  keyboard_task.c  keyboard_task.h  keyboard_worker.c  keymap.c  keymap.h  leader.c  leader.h  matrix.c  matrix.h  matrix_scan.c  matrix_scan.h  tap_dance.c  tap_dance.h  tap_hold.c  tap_hold.h  trackball.c  trackball.h
main/led/: led_curve.c  led_curve.h  led_strip_anim.c
main/periph/: half_spi.c  half_spi.h
main/periph/eink/: eink.c  eink.h  eink_lvgl.c  eink_lvgl.h  en_label.c  en_label.h
main/periph/trackpad/: trackpad.c  trackpad.h  trackpad_cfg.c  trackpad_map.c
main/security/: apdu.c  apdu.h  ccid.c  ccid.h  cr_crc16.c  cr_crc16.h  cr_hmac.c  cr_hmac.h  openpgp_card.c  openpgp_card.h  openpgp_crypto.c  openpgp_crypto.h  openpgp_do.c  openpgp_do.h  otp_hid.c  otp_hid.h  otp_proto.c  otp_proto.h  sec_confirm.c  sec_confirm.h  sec_store.c  sec_store.h
main/sys/: nvs_utils.c  nvs_utils.h
main/tama/: tama_engine.c  tama_engine.h  tama_render.c  tama_render.h  tama_sprites.h
perf/: sizes.json
scripts/: bmp_to_c_array.py  build_release.sh  check.sh  install-hooks.sh  kase-pgp-setup.sh  perf-size.sh  test_binary_protocol.py
test/: CMakeLists.txt  esp_log.h  esp_timer.h  host_clock.c  host_clock.h  nvs.h  nvs_fake.c  nvs_fake.h  nvs_flash.h  test_apdu.c  test_bigram.c  test_board_config.c  test_cdc_monitor.c  test_cdc_parsing.c  test_cdc_protocol.c  test_cdc_rx_feed.c  test_cdc_sec.c  test_cfg_bridge.c  test_combo.c  test_cr_crc16.c  test_eink_pack.c  test_en_status.c  test_espnow_msg.c  test_espnow_peer_filter.c  test_framework.h  test_ghost_filter.c  test_half_battery.c  test_half_matrix_diff.c  test_half_power.c  test_heartbeat.c  test_kbd_route.c  test_key_features.c  test_key_stats.c  test_keycode_report.c  test_keycodes.c  test_keymap_nvs.c  test_leader.c  test_led_anim_constants.c  test_macro_seq.c  test_main.c  (+20 more)
test/freertos/: FreeRTOS.h  task.h
test/fuzz/: .gitignore  README.md  ccid_host_stubs.c  ccid_host_stubs.h  fuzz_ccid.c  fuzz_openpgp.c
test/fuzz/ccid_stubs/: esp_log.h
tmp/: GC9A01.c  GC9A01.h
tools/kase-sec/: Cargo.toml  README.md
tools/kase-sec/src/: cdc.rs  main.rs  sec.rs
(+66 files in other folders)
