cmake_minimum_required(VERSION 3.16)
project(kase_tests C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -g -DTEST_HOST")

add_executable(test_runner
    test_key_stats.c
    test_bigram.c
    ../main/input/key_stats.c
    test_board_config.c
    test_matrix_constants.c
    test_led_anim_constants.c
    ../main/led/led_curve.c
    test_keymap_nvs.c
    nvs_fake.c
    ../main/input/keymap.c
    test_keycodes.c
    test_key_features.c
    ../main/input/key_features.c
    test_tap_hold.c
    ../main/input/tap_hold.c
    host_clock.c
    test_tap_dance.c
    ../main/input/tap_dance.c
    test_combo.c
    ../main/input/combo.c
    test_leader.c
    ../main/input/leader.c
    test_tama_engine.c
    ../main/tama/tama_engine.c
    test_rf_packet.c
    test_heartbeat.c
    ../main/comm/rf/heartbeat.c
    test_half_matrix_diff.c
    ../main/comm/rf/half_scan_task.c
    test_espnow_msg.c
    test_eink_pack.c
    ../main/periph/eink/eink.c
    test_trackpad_map.c
    test_trackpad_cfg.c
    test_trackpad_core.c
    ../main/periph/trackpad/trackpad_map.c
    ../main/periph/trackpad/trackpad.c
    test_rf_pairing.c
    ../main/comm/rf/rf_pairing.c
    test_espnow_peer_filter.c
    ../main/comm/espnow/espnow_link.c
    test_en_status.c
    ../main/periph/eink/en_label.c
    test_rf_signal_q255.c
    ../main/comm/rf/rf_rx_task.c
    test_half_power.c
    ../main/comm/rf/half_power.c
    test_half_battery.c
    ../main/comm/rf/half_battery.c
    test_cdc_monitor.c
    ../main/comm/cdc/ks_monitor.c
    test_cdc_rx_feed.c
    ../main/comm/cdc/cdc_binary_protocol.c
    test_keycode_report.c
    ../main/input/key_processor.c
    test_sec_confirm.c
    ../main/security/sec_confirm.c
    test_sec_store.c
    ../main/security/sec_store.c
    test_cdc_sec.c
    ../main/comm/cdc/cdc_sec_cmds.c
    test_cr_crc16.c
    ../main/security/cr_crc16.c
    test_otp_proto.c
    ../main/security/otp_proto.c
    test_apdu.c
    ../main/security/apdu.c
    test_openpgp_do.c
    ../main/security/openpgp_do.c
    test_openpgp_card.c
    ../main/security/openpgp_card.c
    test_cfg_bridge.c
    ../main/comm/rf/cfg_bridge.c
    test_kbd_route.c
    test_main.c
)

target_include_directories(test_runner PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../boards/kase_v2_debug
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/periph/eink
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/periph/trackpad
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/comm/rf
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/comm/espnow
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/input
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/comm/ble
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/tama
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/led
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/security
    ${CMAKE_CURRENT_SOURCE_DIR}/../main/comm/cdc
)
