[package]
name        = "kase-sec"
version     = "0.1.0"
edition     = "2021"
description = "CLI tool to provision secret slots on a KaSe dongle over USB CDC"

[dependencies]
# CLI argument parsing — "derive" actif pour les macros #[derive(Parser)]
clap = { version = "4.5", features = ["derive"] }

# Communication série USB CDC
serialport = "4.6"

# Gestion des erreurs avec contexte — remplace les Box<dyn Error> verbeux
anyhow = "1.0"

# Décodage hex (ex: "3132...")
hex = "0.4"

# Décodage base32 RFC4648 (standard TOTP/HOTP)
data-encoding = "2"
